--- a/section-1.html
+++ b/section-1.html
@@ -32,8 +32,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="intro.html">
-<link rel="next" href="methods.html">
+
+
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -66,13 +66,7 @@
 <li><a href="./">Generative Model</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 시작하며</a></li>
-<li class="chapter" data-level="2" data-path="intro.html"><a href="intro.html"><i class="fa fa-check"></i><b>2</b> 기계학습</a></li>
-<li class="chapter" data-level="3" data-path="literature.html"><a href="literature.html"><i class="fa fa-check"></i><b>3</b> Literature</a></li>
-<li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
-<li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a></li>
-<li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a></li>
-<li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
+<li class="chapter" data-level="1" data-path=""><a href="#section-1"><i class="fa fa-check"></i><b>1</b> 시작하며</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/zedoul/generative-model-book" target="blank">Published with bookdown</a></li>
 
@@ -93,17 +87,22 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="literature" class="section level1">
-<h1><span class="header-section-number">Chapter 3</span> Literature</h1>
-
+<div id="header">
+<h1 class="title">생성 모델</h1>
+<h4 class="author"><em>재도링</em></h4>
+<h4 class="date"><em>2017-12-27</em></h4>
+</div>
+<div id="section-1" class="section level1">
+<h1><span class="header-section-number">Chapter 1</span> 시작하며</h1>
+<p>뭐없음</p>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-<a href="intro.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="methods.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+
+
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
@@ -135,11 +134,12 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["generative-model.pdf", "generative-model.epub"],
+"download": null,
 "toc": {
 "collapse": "subsection",
 "edit": "https://github.com/zedoul/generative-model-book/edit/master/%s"
-}
+},
+"search": false
 });
 });
 </script>
